--- a/src/index.css
+++ b/src/index.css
@@ -178,15 +178,6 @@ h1.home {
   margin: 0.5em 0;
 }
 
-.homecover {
-  /* background: url(/src/assets/9200579_v8fd8rv7.jpg) no-repeat center center fixed;  */
-  /* background-size: cover; */
-  margin:-1rem calc(50% - 50vw + 9px) 4rem;
-  padding:0.5em 10% 2em;
-  box-shadow: 0px 0px 10px gray;
-  background-color: #f8f9fa;
-}
-
 .hometargets {
   /*background-color: #f3f3f3;*/
   /* border:2px solid #ffb612; */
@@ -200,10 +191,6 @@ h1.home {
   display:inline-block;
 }
 
-.homepipe {
-  color:#000000;
-  margin:0.5em;
-}
 
 /* loading.io */
 
@@ -265,3 +252,41 @@ h1.home {
 }
 
 #logo-cultureelerfgoed-en, #logo-cultureelerfgoed-nl { max-width:100% }
+
+p img { 
+  max-width:100%
+}
+
+.homecover {
+  /* background: url(/src/assets/9200579_v8fd8rv7.jpg) no-repeat center center fixed;  */
+  /* background-size: cover; */
+  background-color: #f8f9fa;
+  padding:0.5em 10% 2em;
+  margin: -16px;
+}
+
+.homepipe {
+  color:#000000;
+  margin:0.5em;
+  font-size:0; 
+  display:block;
+  border-bottom:1px solid #ccc;
+  padding:5px
+}
+
+h1.display-4,h1 { font-size:1.5rem }
+
+@media (min-width:600px)  { 
+  .homepipe { 
+    font-size: 1.4rem; 
+    display:inline;
+    padding:0
+  }
+  .homecover h1.display-4 { 
+    font-size:4.5rem 
+  }
+  .homecover {
+    margin:-1rem calc(50% - 50vw + 9px) 4rem;
+    box-shadow: 0px 0px 10px gray;
+  }
+}
